# GameSyncer

./: .gitignore  CLAUDE.md  CLOUD_SAVES_ANALYSIS.md  CLOUD_SAVES_FIX.md  COMPILE_FIX_GUIDE.md  Cargo.toml  README.md  RELEASE_NOTES.md  debug_test.bat  fix_pending_operations.sql
crates/cloud/: Cargo.toml
crates/cloud/src/: cloud_save_service.rs  game_mapping.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  manual_mapping.rs  save_detection.rs  steam_scan.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: cloud_history.rs  config_store.rs  database.rs  lib.rs  models.rs
crates/ui/: Cargo.toml  MainView.xaml
crates/ui/Strings/en-US/: Resources.resw
crates/ui/Strings/zh-CN/: Resources.resw
crates/ui/src/: lib.rs  main.rs  models.rs  service_manager.rs  services.rs  settings.rs  ui.rs  view_model.rs
crates/ui/src/pages/: cloud_saves.rs  cloud_saves_test.rs  detail.rs  history.rs  home.rs  home_test.rs  mod.rs  settings.rs
docs/: init_project.prompt  save.prompt  scan_and_detect.prompt  synchronize_to_cloud.prompt  ui2.prompt  ui_init.prompt  uisy.prompt
